# prime_finder

./: .gitignore  CMakeLists.txt  Main.cpp  Prime.cpp  Prime.h  PrimeCUDA.cu  PrimeCpp11.cpp  PrimeCpp11.h  PrimeCuda.cpp  PrimeCuda.cu  PrimeCuda.cuh  PrimeCuda.h  PrimeCudaWrapper.cu  PrimeCudaWrapper.cuh  PrimeMpi.cpp  PrimeMpi.h  PrimeOmp.cpp  PrimeOmp.h  PrimePosix.cpp  PrimePosix.h  build_cuda.sh  main.cpp  main.h  single_thread.cpp  single_thread.h
docs/: bsc.bib  main.tex  mystyle.sty
